<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/mTvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mTvCreate" />
    
    <TextView android:id="@+id/mTvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mTvStart" />
    
    <TextView android:id="@+id/mTvResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mTvResume" />
    
    <TextView android:id="@+id/mTvRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mTvRestart" />
    
    <Button android:id="@+id/bClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        />

</LinearLayout>